Match get Score done Implementing remainingScore